--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,77 @@
 /* This is a multi-line
 comment. Add your CSS code
 from Unit 1 - 5 below  */
+nav {
+  background-color: #808080;
+}
+
+nav a {
+  text-decoration: none;  
+  background-color: #ffbf00;
+  color: white;
+  padding: 35px;
+  display: block;
+  float: left;
+}
+
+nav a:hover {
+  background-color: #ee5f3c;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0;
+}
+
+h1 {
+  color: rgb(2, 132, 130);
+  text-align: center;
+}
+
+h2 {
+  color: #ffd700;
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+.board {
+	height: 80%;
+	width: 50%;
+}
+
+.card {
+	height: 200px;
+	width: 150px;
+    border: 1px black solid;
+	border-radius: 10px;
+    background-color: rgb(255, 255, 0);
+    display: inline-block;
+    float: left;
+    margin: 8%
+}
+
+footer {
+  clear: both;
+  text-align: center;
+  background-color: #808080;
+}
+
+#name {
+	font-style: italic;
+    font-weight: bold;
+	color: #ff0000;
+	font-size: 1.2em;
+}
+
+#inventor {
+  clear: both;
+  text-align: center;
+  margin-top: 20px;
+}
