--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -57,6 +57,16 @@ h3 {
     margin: 8%
 }
 
+img {
+	height: 200px;
+	width: 150px;
+    border: 1px black solid;
+	border-radius: 10px;
+    display: inline-block;
+    float: left;
+    margin: 8%
+}
+
 footer {
   clear: both;
   text-align: center;
